--- a/teoricas/teorica_08/src/ekf_slam.tex
+++ b/teoricas/teorica_08/src/ekf_slam.tex
@@ -1,18 +1,28 @@
 \begin{frame}
-    \frametitle{SLAM Problem Definition}
-    \note{Information extracted from https://www.youtube.com/watch?v=X30sEgIws0g}
-    \note{Information extracted from https://www.ipb.uni-bonn.de/html/teaching/photo12-2021/2021-pho2-16-ekf-slam.pptx.pdf}
+    \frametitle{Definición del Problema de SLAM}
+    \note{Información extraída de https://www.youtube.com/watch?v=X30sEgIws0g}
+    \note{Información extraída de https://www.ipb.uni-bonn.de/html/teaching/photo12-2021/2021-pho2-16-ekf-slam.pptx.pdf}
 
-    Given:
+    Dado:
     \begin{itemize}
-        \item Control commands sent $u_{1:T} = \{u_1, u_2, \ldots, u_T\}$
-        \item Observations $z_{1:T} = \{z_1, z_2, \ldots, z_T\}$
+        \item Comandos de control enviados
+        
+        \begin{equation*}
+            \controlCommand_{1:T} = \{\controlCommand_1, \controlCommand_2, \ldots, \controlCommand_T\}
+        \end{equation*}
+        \item Observaciones
+        \begin{equation*}
+            \observation_{1:T} = \{\observation_1, \observation_2, \ldots, \observation_T\}
+        \end{equation*}
     \end{itemize}
 
-    Find:
+    Se busca:
     \begin{itemize}
-        \item Environment map $m$
-        \item Vehicle trajectory (or current pose) $x_{0:T} = \{x_0, x_1, \ldots, x_T\}$ $x_{t}$
+        \item Mapa del entorno: $\map$
+        \item Trayectoria (o pose actual) del vehículo:
+        \begin{equation*}
+            \state_{0:T} = \{\state_0, \state_1, \ldots, \state_T\} \qquad \text{or} \qquad \state_{t}
+        \end{equation*}
     \end{itemize}
 \end{frame}
 
@@ -23,7 +33,7 @@
 
     \begin{itemize}
         \item Recursive filter with \textbf{prediction} and \textbf{correction} steps
-        \item Estimates: $p(x_t, \map | z_{1:t}, u_{1:t})$
+        \item Estimates: $p(x_t, \map | \observation_{1:t}, \controlCommand_{1:t})$
         \item Kalman Filter is a recursive Bayes Filter for the \textbf{linear Gaussian case}
         \item \textbf{EKF} for dealing with \textbf{non-linearities}
     \end{itemize}
@@ -34,7 +44,7 @@
     \note{Información extraída de https://www.youtube.com/watch?v=X30sEgIws0g}
     \note{Información extraída de https://www.ipb.uni-bonn.de/html/teaching/photo12-2021/2021-pho2-16-ekf-slam.pptx.pdf}
 
-    \[ p(\state_{1:t}, \map | z_{1:t}, u_{1:t}) \]
+    \[ p(\state_{1:t}, \map | \observation_{1:t}, \controlCommand_{1:t}) \]
 
     \begin{center}
         \includegraphics[width=0.6\textwidth]{../images/ekf_slam/graphical_model_full_slam.pdf}
@@ -47,11 +57,16 @@
     \note{Información extraída de https://www.ipb.uni-bonn.de/html/teaching/photo12-2021/2021-pho2-16-ekf-slam.pptx.pdf}
 
     We consider the Kalman filter as a solution to the online SLAM problem:
-    \[ p(\state_{t}, \map | z_{1:t}, u_{1:t}) \]
+    \begin{equation*}
+        p(\state_{t}, \map | \observation_{1:t}, \controlCommand_{1:t}) = \int \int \cdots \int p(\state_{1:t}, \map | \observation_{1:t}, \controlCommand_{1:t}) d\state_{1} d\state_{2} \ldots d\state_{t-1}
+    \end{equation*}
 
     \begin{center}
         \includegraphics[width=0.6\textwidth]{../images/ekf_slam/graphical_model_online_slam.pdf}
     \end{center}
+
+    \note{EKF can not adjust previous poses of the trajectory when a loop closure is done but can adjust the map and the current pose.}
+
 \end{frame}
 
 \begin{frame}
@@ -80,10 +95,10 @@
     \begin{itemize}
         \item Application of EKF to SLAM
         \item Estimate robot's pose and landmark locations
-        \item Assumption: known correspondences
-        \item State space (2D plane):
+        \item Assumption: known data association
+        \item State space (for the 2D plane) is:
     \end{itemize}
-    \[ x_t = (x, y, \theta, \underbrace{\map_{1,x}, \map_{1,y}}_{\text{landmark 1}}, \ldots, \underbrace{\map_{n,x}, \map_{n,y}}_{\text{landmark n}} )^{\top} \]
+    \[ x_t = (\underbrace{x, y, \theta}_{robot's pose}, \underbrace{\map_{1,x}, \map_{1,y}}_{\text{landmark 1}}, \ldots, \underbrace{\map_{n,x}, \map_{n,y}}_{\text{landmark n}} )^{\top} \]
 \end{frame}
 
 \begin{frame}
@@ -162,6 +177,9 @@
             \end{bNiceMatrix}}_{\Sigma}
         \end{equation*}
     \end{itemize}
+
+    The matrix diagonal blocks (yellow and blue) are the covariance of the pose and landmarks. The green blocks links the landmarks with the pose.
+
 \end{frame}
 
 \begin{frame}
@@ -214,7 +232,7 @@
 
 
     \begin{center}
-        \includegraphics[width=0.5\textwidth]{./ekf_slam/ekf_slam_initial_state.pdf}
+        \includegraphics[width=0.4\textwidth]{./ekf_slam/ekf_slam_initial_state.pdf}
     \end{center}
 
     \begin{equation*}
@@ -240,7 +258,7 @@
 
 
     \begin{center}
-        \includegraphics[width=0.5\textwidth]{../images/ekf_slam/ekf_slam_predicted_motion.pdf}
+        \includegraphics[width=0.4\textwidth]{../images/ekf_slam/ekf_slam_predicted_motion.pdf}
     \end{center}
 
     \begin{equation*}
@@ -264,6 +282,11 @@
             \Sigma_{\map_n \state_t} & \Sigma_{\map_n \map_1} & \cdots & \Sigma_{\map_n \map_n}
         \end{bNiceMatrix}}_{\Sigma}
     \end{equation*}
+
+    \tiny
+
+    If the robot moves, the uncertainty increases and we must update the robot pose and the correlation between the robot and the landmarks. The latter happens because now the pose provides less information about the landmarks since the robot got more uncertainty about its pose. The landmarks are not updated since the robot motion does not affect the position of the landmarks.
+
 \end{frame}
 
 \begin{frame}
@@ -271,9 +294,10 @@
     \note{Información extraída de https://www.youtube.com/watch?v=X30sEgIws0g}
     \note{Información extraída de https://www.ipb.uni-bonn.de/html/teaching/photo12-2021/2021-pho2-16-ekf-slam.pptx.pdf}
 
+    Given the predicted pose and the landmark location, we predict the measurement we should obtain.
 
     \begin{center}
-        \includegraphics[width=0.5\textwidth]{../images/ekf_slam/ekf_slam_predicted_measurement.pdf}
+        \includegraphics[width=0.4\textwidth]{../images/ekf_slam/ekf_slam_predicted_measurement.pdf}
     \end{center}
 
     \begin{equation*}
@@ -297,9 +321,10 @@
     \note{Información extraída de https://www.youtube.com/watch?v=X30sEgIws0g}
     \note{Información extraída de https://www.ipb.uni-bonn.de/html/teaching/photo12-2021/2021-pho2-16-ekf-slam.pptx.pdf}
 
+    The sensor observes the landmark.
 
     \begin{center}
-        \includegraphics[width=0.5\textwidth]{../images/ekf_slam/ekf_slam_obtained_measurement.pdf}
+        \includegraphics[width=0.4\textwidth]{../images/ekf_slam/ekf_slam_obtained_measurement.pdf}
     \end{center}
 
     \begin{equation*}
@@ -324,7 +349,7 @@
     \note{Información extraída de https://www.ipb.uni-bonn.de/html/teaching/photo12-2021/2021-pho2-16-ekf-slam.pptx.pdf}
 
     \begin{center}
-        \includegraphics[width=0.5\textwidth]{../images/ekf_slam/ekf_slam_difference_between_prediction_observation.pdf}
+        \includegraphics[width=0.4\textwidth]{../images/ekf_slam/ekf_slam_difference_between_prediction_observation.pdf}
     \end{center}
 
     \begin{equation*}
@@ -350,7 +375,7 @@
 
 
     \begin{center}
-        \includegraphics[width=0.5\textwidth]{../images/ekf_slam/ekf_slam_update.pdf}
+        \includegraphics[width=0.4\textwidth]{../images/ekf_slam/ekf_slam_update.pdf}
     \end{center}
 
     \begin{equation*}
@@ -373,6 +398,8 @@
             \Sigma_{\map_n \state_t} & \Sigma_{\map_n \map_1} & \cdots & \Sigma_{\map_n \map_n}
         \end{bNiceMatrix}}_{\Sigma}
     \end{equation*}
+
+    The robot pose and the landmarks locations are corrected along the whole covariance matrix.
 \end{frame}
 
 \begin{frame}
@@ -384,10 +411,10 @@
     \begin{itemize}
         \item Platform moves in the 2D plane
         \item Velocity-based motion model
-        \item Observation of point landmarks
+        \item Observation of point landmarks (e.g. corners or columns)
         \item Range-bearing sensor (measures distance and angle to landmarks)
         \item Known data association (which measurement comes from which landmark)
-        \item Known number of landmarks
+        \item Known number of landmarks (This is not a constraint but its implementation need some checks in the algorithm: check if the state vector is full requiring to do some bookkeeping). \note{We leave it out of this lecture because It will drag away the attention to the important concepts.}
     \end{itemize}
 \end{frame}
 
@@ -397,7 +424,7 @@
     \note{Información extraída de https://www.ipb.uni-bonn.de/html/teaching/photo12-2021/2021-pho2-16-ekf-slam.pptx.pdf}
 
     \begin{itemize}
-        \item Platform starts at the origin of its own reference frame
+        \item Platform starts in its own reference frame
         \item All landmarks are initially unknown (not yet observed)
         \item State vector dimension: $2N + 3$ \\
         (3 for robot pose + $2N$ for $N$ landmarks in 2D space)
@@ -420,9 +447,12 @@
     \end{equation*}
     
     \begin{itemize}
-        \item $\Sigma_{x_0}$: Initial uncertainty in robot pose (typically small)
-        \item $\infty I_{2}$: Infinite uncertainty for unobserved landmarks
+        \item $\Sigma_{x_0}$: Initial uncertainty in robot pose (typically  a zero matrix or small)
+        \item $\infty I_{2}$: Infinite uncertainty for unobserved landmarks (In practice we don't use infinite to avoid numerical issues)
     \end{itemize}
+
+    \note{We can limit the use of landmark by their index. Each time the landmark a new landmark is observed we increase the index so that landmark is incorporated to the state and the covariance matrix. We do this until we reach the maximum of landmarks that we can work with.}
+
 \end{frame}
 
 \begin{frame}
@@ -458,7 +488,7 @@
             -\frac{v_t}{\omega_t} \sin \theta + \frac{v_t}{\omega_t} \sin (\theta + \omega_t \Delta t) \\ 
             \frac{v_t}{\omega_t} \cos \theta - \frac{v_t}{\omega_t} \cos (\theta + \omega_t \Delta t) \\ 
             \omega_t \Delta t 
-            \end{bmatrix}}_{g_{x,y,\theta}\left(\controlCommand_{t}, \begin{bmatrix} x, y, \theta \end{bmatrix}^{\top}\right)}
+            \end{bmatrix}}_{g_{x,y,\theta}\left(\controlCommand_{t}, \begin{bmatrix} x & y & \theta \end{bmatrix}^{\top}\right)}
         \end{equation*}
         \item How to map that to the $2N+3$ dimmension state space used in EKF?
     \end{itemize}
@@ -515,6 +545,8 @@
             \end{bmatrix}}_{g(\controlCommand_{t}, \state_t)}
         \end{equation*}
     \end{itemize}
+
+    \note{F is the mapping function that allows to update the state only in the pose components using the motion model.}
 \end{frame}
 
 \begin{frame}
@@ -552,7 +584,11 @@
             0 & I
         \end{bmatrix}
     \end{equation*}
-    where $G_t^x$ is the $3 \times 3$ Jacobian of the motion and $I$ is the $2N \times 2N$ identity matrix.
+    where $G_{t}^{\state}$ is the $3 \times 3$ Jacobian of the motion and $I$ is the $2N \times 2N$ identity matrix.
+
+
+    Note that the Identity submatrix $I$ means that landmarks covariances would not change (it would remains the same as the previous covariance).
+
 \end{frame}
 
 \begin{frame}
@@ -560,10 +596,10 @@
     \note{Información extraída de https://www.youtube.com/watch?v=X30sEgIws0g}
     \note{Información extraída de https://www.ipb.uni-bonn.de/html/teaching/photo12-2021/2021-pho2-16-ekf-slam.pptx.pdf}
     
-    The Jacobian matrix \( G_t^x \) for the motion model is computed as:
+    The Jacobian matrix $G_{t}^{\state}$ for the motion model is computed as:
     
     \begin{align*}
-        G_t^x &= \frac{\partial}{\partial(x, y, \theta)^T} \left(
+        G_{t}^{\state} &= \frac{\partial}{\partial(x, y, \theta)^{\top}} \left(
         \begin{bmatrix}
         x \\
         y \\
@@ -576,7 +612,7 @@
         \omega_t \Delta t
         \end{bmatrix}
         \right) \\
-        &= I + \frac{\partial}{\partial(x, y, \theta)^T} 
+        &= I + \frac{\partial}{\partial(x, y, \theta)^{\top}} 
         \begin{bmatrix}
         -\frac{v_t}{\omega_t} \sin \theta + \frac{v_t}{\omega_t} \sin(\theta + \omega_t \Delta t) \\
         \frac{v_t}{\omega_t} \cos \theta - \frac{v_t}{\omega_t} \cos(\theta + \omega_t \Delta t) \\
@@ -607,7 +643,7 @@
         \bar{\Sigma}_t &= G_t \Sigma_{t-1} G_t^{\top} + R_t \\
         &= 
         \begin{bmatrix}
-        G_t^x & 0 \\
+        G_{t}^{\state} & 0 \\
         0 & I
         \end{bmatrix}
         \begin{bmatrix}
@@ -615,14 +651,14 @@
         \Sigma_{mx} & \Sigma_{mm}
         \end{bmatrix}
         \begin{bmatrix}
-        (G_t^x)^{\top} & 0 \\
+        (G_{t}^{\state})^{\top} & 0 \\
         0 & I
         \end{bmatrix}
         + R_t \\
         &=
         \begin{bmatrix}
-        G_t^x \Sigma_{xx} (G_t^x)^{\top} & G_t^x \Sigma_{xm} \\
-        (G_t^x \Sigma_{xm})^{\top} & \Sigma_{mm}
+        G_{t}^{\state} \Sigma_{xx} (G_{t}^{\state})^{\top} & G_{t}^{\state} \Sigma_{xm} \\
+        (G_{t}^{\state} \Sigma_{xm})^{\top} & \Sigma_{mm}
         \end{bmatrix}
         + R_t
     \end{align*}
@@ -635,8 +671,8 @@
     \note{Información extraída de https://www.ipb.uni-bonn.de/html/teaching/photo12-2021/2021-pho2-16-ekf-slam.pptx.pdf}
 
     \begin{algorithmic}[1]
-        \Procedure{EKF\_SLAM\_Prediction}{$\mu_{t-1}, \Sigma_{t-1}, u_t, z_t, c_t, R_t$}
-        \State $F_x = \begin{bmatrix}
+        \Procedure{EKF\_SLAM\_Prediction}{$\mu_{t-1}, \Sigma_{t-1}, \controlCommand_t, \observation_t, c_t, R_t$}
+        \State $F_{\state} = \begin{bmatrix}
         1 & 0 & 0 & 0 & 0 & \cdots & 0 \\
         0 & 1 & 0 & 0 & 0 & \cdots & 0 \\
         0 & 0 & 1 & 0 & 0 & \cdots & 0 \\
@@ -649,14 +685,14 @@
         \omega_t \Delta t
         \end{bmatrix}$
         \vspace{1em}
-        \State $G_t = I + F_x^{\top}
+        \State $G_t = I + F_{\state}^{\top}
         \begin{bmatrix}
         0 & 0 & \frac{-v_t}{\omega_t} \cos(\mu_{t-1,\theta}) + \frac{v_t}{\omega_t} \cos(\mu_{t-1,\theta} + \omega_t \Delta t) \\
         0 & 0 & \frac{-v_t}{\omega_t} \sin(\mu_{t-1,\theta}) + \frac{v_t}{\omega_t} \sin(\mu_{t-1,\theta} + \omega_t \Delta t) \\
         0 & 0 & 0
-        \end{bmatrix} F_x$
+        \end{bmatrix} F_{\state}$
         \vspace{1em}
-        \State $\bar{\Sigma}_t = G_t \Sigma_{t-1} G_t^{\top} + \underbrace{F_x^{\top} R_t F_x}_{R_t}$
+        \State $\bar{\Sigma}_t = G_{t} \Sigma_{t-1} G_{t}^{\top} + \underbrace{F_{\state}^{\top} R_{t}^{\state} F_{\state}}_{R_t}$
         \EndProcedure
     \end{algorithmic}
     
@@ -720,7 +756,7 @@
     \note{Información extraída de https://www.ipb.uni-bonn.de/html/teaching/photo12-2021/2021-pho2-16-ekf-slam.pptx.pdf}
 
     \begin{itemize}
-        \item Range-Bearing observation $z_t^i = \begin{bmatrix} r_t^i \\ \phi_t^i \end{bmatrix}^{\top}$
+        \item Range-Bearing observation $\observation_t^i = \begin{bmatrix} r_t^i \\ \phi_t^i \end{bmatrix}^{\top}$
         
         \item If landmark has not been observed, we can initialize it with:
     \end{itemize}
@@ -797,12 +833,19 @@
             \end{bmatrix}
         \end{align*}    
         \item Compute the Jacobian
-        \begin{equation*}
-            \prescript{\text{low}}{}{H^{i}_{t}} = \frac{\partial h(\bar{\mu}_t)}{\partial \bar{\mu}_t}
-        \end{equation*}
-        \begin{equation*}
-            \text{low-dim space} \quad (x, y, \theta, \map{j,x}, \map{j,y})
-        \end{equation*}
+        \begin{center}
+            \includegraphics[width=0.4\textwidth]{ekf_slam/jacobian_observation.pdf}
+        \end{center}
+        %
+        % \begin{equation*}
+        %     \prescript{\text{low}}{}{H^{i}_{t}} = \frac{\partial h(\bar{\mu}_t)}{\partial \bar{\mu}_t}
+        % \end{equation*}
+        % \begin{equation*}
+        %     \text{low-dim space} \quad (x, y, \theta, \map_{j,x}, \map_{j,y})
+        % \end{equation*}
+
+        We are only interested in the 5-dimension related with the observation.
+
     \end{itemize}
 \end{frame}
 
@@ -870,7 +913,7 @@
         \item We obtain (by applying the chain rule)
         \begin{align*}
             \frac{\partial \sqrt{q}}{\partial x}
-            &= \frac{1}{2} \cdot \frac{1}{\sqrt{q}} \cdot 2 \delta_x \cdot (-1)\\
+            &= \frac{1}{2} \frac{1}{\sqrt{q}} 2 \delta_x (-1)\\
             &= \frac{1}{q} \left(-\sqrt{q} \delta_x \right)
         \end{align*} 
     \end{itemize}
@@ -947,8 +990,8 @@
                 0 & 0 & 0 & 0 \cdots 0 & 1 & 0 & 0 \cdots 0 \\
                 0 & 0 & 0 & 0 \cdots 0 & 0 & 1 & 0 \cdots 0
                 \CodeAfter
-                \UnderBrace{5-4}{5-4}{2j-2}
-                \UnderBrace{5-7}{5-7}{2N-2j}
+                \UnderBrace{5-4}{5-4}{2(j-1)}
+                \UnderBrace{5-7}{5-7}{2(N-j)}
             \end{bNiceMatrix}
         \end{equation*} 
     \end{itemize}
@@ -980,8 +1023,8 @@
     \begin{algorithmic}[1]
         \Procedure{EKF\_SLAM\_Correction}{}
         \State $Q_t = \begin{bmatrix} \sigma_r^2 & 0 \\ 0 & \sigma_\theta^2 \end{bmatrix}$ \Comment{Measurement noise covariance}
-        \For {all observed features $z_i^t = (r_i^t, \phi_i^t)^{\top}$}
-            \State $j = c_i^t$ \Comment{Landmark identifier}
+        \For {all observed features $\observation_i^t = (r_i^t, \phi_i^t)^{\top}$}
+            \State $j = c_i^t$ \Comment{data association somehow}
             \If{landmark $j$ never seen before}
                 \State $\begin{bmatrix} \bar{\mu}_{j,x} \\ \bar{\mu}_{j,y} \end{bmatrix} = 
                        \begin{bmatrix} \bar{\mu}_{t,x} \\ \bar{\mu}_{t,y} \end{bmatrix} + 
@@ -1023,7 +1066,7 @@
         \end{bmatrix} F_{x,j}$ \Comment{Measurement Jacobian}
             
         \State $K_t^i = \bar{\Sigma}_t H_t^{i\top}(H_t^i \bar{\Sigma}_t H_t^{i\top} + Q_t)^{-1}$ \Comment{Kalman gain}
-        \State $\bar{\mu}_t = \bar{\mu}_t + K_t^i(z_t^i - \hat{z}_t^i)$ \Comment{State update}
+        \State $\bar{\mu}_t = \bar{\mu}_t + K_t^i(\observation_t^i - \hat{z}_t^i)$ \Comment{State update}
         \State $\bar{\Sigma}_t = (I - K_t^i H_t^i) \bar{\Sigma}_t$ \Comment{Covariance update}
         \EndFor
         \State $\mu_t = \bar{\mu}_t$ \Comment{Final state estimate}
@@ -1039,10 +1082,13 @@
     \note{Información extraída de https://www.ipb.uni-bonn.de/html/teaching/photo12-2021/2021-pho2-16-ekf-slam.pptx.pdf}
 
     \begin{itemize}
-    \item Measurement update in a single step requires only one full belief update
-    \item Always normalize angular components
-    \item May not need to create $F$ matrices explicitly
+        \item Measurement update in a single step requires only one full belief update
+        \item Always normalize angular components to be in $[-\pi,\pi]$. Otherwise this can screw up the jacobians.
+        \item May not need to create $F$ matrices explicitly \note{you can manipulate the covarince matrix elements directly}
     \end{itemize}
+
+    \note{As we describe the pseudo-code we need one full belief update for each observed landmark indepently. In Practivce, we can do a full belief update using all the landmarks that currently observed to speed up computation.}
+
 \end{frame}
 
 \begin{frame}
@@ -1057,7 +1103,8 @@
         \item high ambiguity
         \item possible environment symmetries
     \end{itemize}
-    \item Uncertainties collapse after a loop closure (whether the closure was correct or not) 
+    \item Uncertainties collapse after a loop closure (whether the closure was correct or not)
+    \item \alert{Wrong loop closures lead to filter divergence!}
     \end{itemize}
 \end{frame}
 
@@ -1103,11 +1150,14 @@
     \end{itemize}
 
     \begin{center}
-        \includegraphics[width=0.5\textwidth]{../images/ekf_slam/ekf_slam_correlations.pdf}
+        \includegraphics[width=0.45\textwidth]{../images/ekf_slam/ekf_slam_correlations.pdf}
     \end{center}
 
+    \scriptsize
+
     \begin{itemize}
-        \item The Covariance Matrix represents the uncertainty and correlation between different state variables (e.g., robot pose at different time steps and positions of landmarks).
+        \item In the long run all the estimates are fully correlated. All the landmark locations are fully (and strongly) correlated with each other (thick lines) and the pose is correlated with the landmarks in a weaker manner (thin lines).
+        \item The Covariance Matrix represents the uncertainty and correlation between different state variables (e.g., robot pose and positions of landmarks).
         \begin{itemize}
             \item Diagonal: Variance (uncertainty) of each variable.
             \item Off-diagonal: Correlation between variables (how errors in one affect another).
@@ -1126,6 +1176,12 @@
         \only<2>{\includegraphics[width=0.8\textwidth]{../images/ekf_slam/ekf_slam_correlation_matrix2.pdf}}
         \only<3>{\includegraphics[width=0.8\textwidth]{../images/ekf_slam/ekf_slam_correlation_matrix3.pdf}}
     \end{center}
+
+    \note{The while line (zero values) in the third row and column of the correlation matrix comes from the orientation. This means the robot orientation is not correlated with the lanmarks positions.}
+
+    \note{Note that the correlation matrix looks like a checkboard. This is because, in the map, each landmark has a covariance that is mosly a circle, so the 2x2 landmarks covariance block of the main diagonal of the correlation matrix, off-diagonal elements of such 2x2 block are close to zero.
+    On the other hand, for the off-diagonal elements of the correlation matrix, if I would be able to fix the x component location of one landmark, so I could dramatically reduce the uncertainty about the x location of all the other landmarks as well, because through the estimate Iquite of rigitdly connected those landmarks so if I shift one landmark with high uncertainty with zero uncertainty then all the map will shift as well. Therefore, if know the precise x location of a landmark I will know all the x locations of all other landmarks as well but I not learn anything about y.}
+
 \end{frame}
 
 \begin{frame}
@@ -1134,9 +1190,11 @@
     \note{Información extraída de https://www.ipb.uni-bonn.de/html/teaching/photo12-2021/2021-pho2-16-ekf-slam.pptx.pdf}
 
     \begin{itemize}
-        \item The correlation between the robot's pose and the landmarks cannot be ignored 
+        \item The correlation between the robot's pose and the landmarks \textbf{cannot} be ignored 
         \item Assuming independence generates too optimistic estimates of the uncertainty
     \end{itemize}
+
+    \note{So if you ignore the correlations you will be too optimistic since this means that you are setting all the other uncertainty values to zero.}
 
 \end{frame}
 
@@ -1146,8 +1204,8 @@
     \note{Información extraída de https://www.ipb.uni-bonn.de/html/teaching/photo12-2021/2021-pho2-16-ekf-slam.pptx.pdf}
 
     \begin{itemize}
-    \item The determinant of any sub-matrix of the map covariance matrix decreases monotonically
-    \item New landmarks are initialized with maximum uncertainty
+    \item The \textbf{determinant} of any sub-matrix of the map covariance matrix \textbf{decreases monotonically}
+    \item New landmarks are initialized with \textbf{maximum uncertainty}
     \end{itemize}
 
     \begin{center}
@@ -1186,10 +1244,10 @@
     \note{Información extraída de https://www.ipb.uni-bonn.de/html/teaching/photo12-2021/2021-pho2-16-ekf-slam.pptx.pdf}
 
     \begin{itemize}
-    \item Cubic complexity w.r.t. measurement dimensionality
+    \item Cubic complexity w.r.t. measurement dimensionality \note{and not w.r.t the whole state, this is because you are only observing small number of landmark and not the whole map.}
     \item Cost per step: $O(n^2)$ (dominated by number of landmarks)
     \item Memory consumption: $O(n^2)$
-    \item Computationally intractable for large maps
+    \item Computationally intractable for large maps!
     \end{itemize}
 \end{frame}
 
@@ -1200,10 +1258,14 @@
 
     \begin{itemize}
     \item First probabilistic SLAM approach using EKF
-    \item Successful in medium-scale scenes
-    \item Today mainly used for short-term estimates (VO)
-    \item Unimodal (Gaussian) estimates only
+    \item Convergence proof for the linear Gaussian case
     \item Can diverge if non-linearities are large
+    \item The smaller the noise the better
+    \item Unimodal (Gaussian) estimates only \note{EKF can not handle multimodal uncertainty. Eg: I cannot say either the landmark is here or there but I don't exatly know. Particle filter can!}
+    \item Successful in medium-scale scenes
+    \item Used for short-term estimates (VO)
+    \item Approximations exists to reduce the computational complexity
+    
     \end{itemize}
 \end{frame}
 
